Fixed footer navigation link's active area stretching beyond their text

--- a/source/css/scss/objects/_footer.scss
+++ b/source/css/scss/objects/_footer.scss
@@ -60,7 +60,7 @@
 	}
 
 	li > a {
-		display: block;
+		display: inline-block;
 		// padding: $pad;
 		font-size: $font-size-small-2; //@14
 	}
